--- a/olist-library/pyproject.toml
+++ b/olist-library/pyproject.toml
@@ -11,6 +11,7 @@ djangorestframework = "^3.11.0"
 django-filter = "^2.3.0"
 psycopg2 = "^2.8.5"
 django-environ = "^0.4.5"
+drf-yasg = "^1.17.1"
 
 [tool.poetry.dev-dependencies]
 
