--- a/olist-library/pyproject.toml
+++ b/olist-library/pyproject.toml
@@ -12,6 +12,8 @@ django-filter = "^2.3.0"
 psycopg2 = "^2.8.5"
 django-environ = "^0.4.5"
 drf-yasg = "^1.17.1"
+django_heroku = "^0.3.1"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 
