--- a/olist-library/pyproject.toml
+++ b/olist-library/pyproject.toml
@@ -14,6 +14,7 @@ django-environ = "^0.4.5"
 drf-yasg = "^1.17.1"
 django_heroku = "^0.3.1"
 gunicorn = "^20.0.4"
+dj-database-url = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 
