--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ drf-yasg = "^1.17.1"
 django_heroku = "^0.3.1"
 gunicorn = "^20.0.4"
 dj-database-url = "^0.5.0"
+django-cors-headers = "^3.4.0"
 
 [tool.poetry.dev-dependencies]
 
